* [Fix] Code cleanup according to code analysis